--- a/src/Shared/BottomFooter/BottomFooter.css
+++ b/src/Shared/BottomFooter/BottomFooter.css
@@ -1,3 +1,4 @@
+/* 
 .bottom-menu {
   position: relative;
   display: flex;
@@ -14,7 +15,7 @@
 }
 .bottom-menu li a {
   width: 50px;
-  /* width: 75px; */
+  width: 75px;
   height: 45px;
   color: #ff004c;
   text-align: center;
@@ -34,10 +35,11 @@
   z-index: 12px;
 }
 .bottom-menu li a.active-items i {
-  top: -102%;
+  top: -82%;
   transition-delay: 0.3s;
   transition: 1s;
 }
+
 .bottom-menu li a span {
   display: block;
   font-size: 12px;
@@ -47,7 +49,7 @@
   transition-delay: 0.3s;
   transition: 1s;
   z-index: 9;
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 .bottom-menu li a.active-items span {
@@ -78,4 +80,4 @@
   .bottom-menu li a {
     width: 75px;
   }
-}
+} */
